@@ -3,14 +3,14 @@ package Gameplay.Link;
 import java.awt.event.KeyEvent;
 import java.awt.image.BufferedImage;
 import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.LinkedList;
 
+import Engine.ECSystem.Level;
 import Engine.ECSystem.ObjectManager;
 import Engine.ECSystem.Types.Actor;
 import Engine.ECSystem.Types.Entity;
-import Engine.Graphics.Animation;
 import Engine.Graphics.Spritesheet;
+import Engine.Graphics.Animations.Animation;
+import Engine.Graphics.Animations.AnimationEvent;
 import Engine.Graphics.Components.AnimationMachine;
 import Engine.Graphics.Components.ZeldaCameraComponent;
 import Engine.Input.InputFunction;
@@ -18,10 +18,12 @@ import Engine.Input.InputManager;
 import Engine.Math.Vector2D;
 import Engine.Physics.CollisionResult;
 import Engine.Physics.Components.BoxCollider;
-import Gameplay.States.PlayState;
+import Engine.Window.GameLoop;
+import Engine.Physics.Components.ColliderManager;
+import Gameplay.AnimatedObject.Bomb;
 import Gameplay.Enemies.Enemy;
+import Gameplay.Interactives.Interactive;
 import Gameplay.LifeBar.LifeBar;
-import Gameplay.NPC.DialogueWindow;
 import Gameplay.NPC.Npc;
 
 public class Player extends Actor {
@@ -77,6 +79,7 @@ public class Player extends Actor {
     protected int healthPoints = 10;
     private ZeldaCameraComponent mCamera;
     protected BoxCollider mCollider;
+    protected BoxCollider hitbox;
     final private  int damage = 2;
     private int velocity = 0;
     final int default_velocity = 10;
@@ -104,14 +107,19 @@ public class Player extends Actor {
         mAnimation = AddComponent(new AnimationMachine(this, sprite));
         mCamera = AddComponent(new ZeldaCameraComponent(this));
         mCamera.Bind();
-        mCamera.SetBounds(new Vector2D<>(800.f, 600.f), new Vector2D<>(75 * 32.f, 75 * 32.f));
         SetAnimation(RIGHT, sprite.GetSpriteArray(RIGHT), delay);
         implementsActions();
         this.SetName("Player");
         //---------------------------------------------------------------------
         lifeBar = new LifeBar(getPlayer(), getHealthPoints());
         //---------------------------------------------------------------------
-        mCollider = (BoxCollider)AddComponent(new BoxCollider(this, new Vector2D<>(90f,0.f)));
+        //mCollider = (BoxCollider)AddComponent(new BoxCollider(this));
+
+        setPseudoPosition(50f, 50f);
+        setPseudoPositionVisible();
+        hitbox = (BoxCollider)AddComponent(new BoxCollider(this, new Vector2D<Float>(55f, 60f), true));
+        ColliderManager.GetColliderManager().addCollider(hitbox, true);
+        ObjectManager.GetObjectManager().SetPawn(this);
     }
     // ------------------------------------------------------------------------
 
@@ -119,63 +127,33 @@ public class Player extends Actor {
      * 
      */
     private void implementsActions (){ // it can be coptimazed
+        int[] stop_run = new int[]{KeyEvent.VK_D, KeyEvent.VK_A, KeyEvent.VK_S, KeyEvent.VK_W};
+        for (int i = 0; i<stop_run.length; i++){
+            InputManager.SubscribeReleased(stop_run[i], new InputFunction() {
+            @Override
+            public void Execute() {
+                setVelocity(0);
+                stop = true;
+                attack = false;
+            }
+            });
+        }
         //RUN______________________________________________________________________________________________
         InputManager.SubscribePressed(KeyEvent.VK_W, new InputFunction() {
             @Override
-            public void Execute() {
-                activateAction(UP);
-             }
+            public void Execute() {activateAction(UP);}
         });
         InputManager.SubscribePressed(KeyEvent.VK_S, new InputFunction() {
             @Override
-            public void Execute() {
-                activateAction(DOWN);
-             }
+            public void Execute() {activateAction(DOWN);}
         });
         InputManager.SubscribePressed(KeyEvent.VK_A, new InputFunction() {
             @Override
-            public void Execute() {
-                activateAction(LEFT);
-             }
+            public void Execute() {activateAction(LEFT);}
         });
         InputManager.SubscribePressed(KeyEvent.VK_D, new InputFunction() {
             @Override
-            public void Execute() {
-                activateAction(RIGHT);
-             }
-        });
-        //STOP______________________________________________________________________________________________
-        InputManager.SubscribeReleased(KeyEvent.VK_W, new InputFunction() {
-            @Override
-            public void Execute() {
-                setVelocity(0);
-                stop = true;
-                attack = false;
-             }
-        });
-        InputManager.SubscribeReleased(KeyEvent.VK_S, new InputFunction() {
-            @Override
-            public void Execute() {
-                setVelocity(0);
-                stop = true;
-                attack = false;
-            }
-        });
-        InputManager.SubscribeReleased(KeyEvent.VK_A, new InputFunction() {
-            @Override
-            public void Execute() {
-                setVelocity(0);
-                stop = true;
-                attack = false;
-            } 
-        });
-        InputManager.SubscribeReleased(KeyEvent.VK_D, new InputFunction() {
-            @Override
-            public void Execute() {
-                setVelocity(0);
-                stop = true;
-                attack = false;
-            }
+            public void Execute() {activateAction(RIGHT);}
         });
         //ATTACK_____________________________________________________________________________________________
         InputManager.SubscribePressed(KeyEvent.VK_J, new InputFunction() {
@@ -230,30 +208,64 @@ public class Player extends Actor {
                 bow =false;
             }
         });
+
+        InputManager.SubscribeReleased(KeyEvent.VK_B, new InputFunction() {
+            @Override
+            public void Execute() {
+                if(nbombs >= 0){
+                    new Bomb(new Vector2D<Float>(GetPosition().x, GetPosition().y));
+                    nbombs--;
+                }else{
+                    System.out.println("Bombs run out");}
+                
+            }
+        });
         //Show LifeBar_______________________________________________________________________________________
         InputManager.SubscribePressed(KeyEvent.VK_M, new InputFunction() {
             @Override
-            public void Execute() {
-                lifeBar.setVisible(true);
-            }
+            public void Execute() {lifeBar.setVisible(true);}
         });
         InputManager.SubscribeReleased(KeyEvent.VK_M, new InputFunction() {
             @Override
-            public void Execute() {
-                lifeBar.setVisible(false);
-            }
+            public void Execute() {lifeBar.setVisible(false);}
         });
         InputManager.SubscribePressed(KeyEvent.VK_P, new InputFunction() { //Pause
             @Override
-            public void Execute() {
-                Pause();
-            }
+            public void Execute() {Pause();}
         });
-        ///* 
+        ///Interaction_______________________________________________________________________________________
         InputManager.SubscribePressed(KeyEvent.VK_E, new InputFunction() {
             @Override
+            public void Execute() {interact();}
+        });
+
+        mAnimation.AddFinishedListener(new AnimationEvent() {
+
+            @Override
+            public void OnTrigger() {
+                if (falling) //Finished falling animation
+                {
+                    linkHasFalled();
+                }
+                else if (nArrows != 0 && bow) //Spawn Arrow
+                {
+                    shootArrow();
+                    bow = false;
+                }
+                else if (attack) //Finished Attack (attack && !bow)
+                {
+                    Attack();
+                    bow = false;
+                    attack = false;
+                }
+                //mAnimation.setMustComplete(false);
+            }
+        });
+
+        InputManager.SubscribePressed(KeyEvent.VK_T, new InputFunction() {
+            @Override
             public void Execute() {
-                interact();
+                System.out.println(ColliderManager.GetColliderManager().getCollision(hitbox, Interactive.class, true));
             }
         });
     }
@@ -269,52 +281,27 @@ public class Player extends Actor {
     }
     // ------------------------------------------------------------------------
 
+    /* Animation StateMachine
+     * 
+     */
     public void Animate() {
-        //System.out.println(actionToString());
-        if (mAnimation.getMust_Complete()){
-            //System.out.println("Is must finised");
-            return;} //Early return, if it is a animation thats has to be complete, do not animaate
 
-        if (stop)
-        {
+        if (mAnimation.MustComplete()){return;} //Early return, if it is a animation thats has to be complete, do not animaate
+        if (stop){
             setMovement(Action.STOP);
-            if (attack)
-            {
-                setMovement(Action.ATTACK);
-            }
-            else
-            {
-                if (bow)
-                {
-                    setMovement(Action.BOW);
-                }
-                else
-                {
-                    setMovement(Action.STOP);
-                }
+            if (attack){setMovement(Action.ATTACK);}
+            else{
+                if (bow){setMovement(Action.BOW);}
+                else{setMovement(Action.STOP);}
             }
         }
-        else
-        {
-            if(attack){
-                setMovement(Action.STOP);
-                setMovement(Action.ATTACK);
-            }
-            else
-            {
-                if(bow)
-                {
-                    setMovement(Action.STOP);
-                    setMovement(Action.BOW);
-                }
-                else
-                {   
-                    if(falling){
-                        setMovement(Action.STOP);
-                        setMovement(null);
-                    }else{
-                        setMovement(Action.RUN);
-                    }
+        else{
+            if(attack){setMovement(Action.STOP);setMovement(Action.ATTACK);}
+            else{
+                if(bow){setMovement(Action.STOP);setMovement(Action.BOW);}
+                else{   
+                    if(falling){setMovement(Action.STOP);setMovement(null);}
+                    else{setMovement(Action.RUN);}
                 }
             }
         }
@@ -328,91 +315,57 @@ public class Player extends Actor {
     @Override
     public void Update() { 
         super.Update();
-        //System.out.println("iasufgbiujd");
         playerStateMachine();
         Animate();
-        if(able_to_takeDamage){
-            takeDamage();
-        }
-        mAnimation.GetAnimation().SetDelay(delay);
+        if(able_to_takeDamage){takeDamage();}
         lifeBar.Update();
+        pseudoPositionUpdate();
+        hitbox.Update();
     }
     public void playerStateMachine(){
-        if(dash)
-        {
-            dash();
-            return;  //Early return dash is mostly the dominate action, so if link is dashing he can not do anything else
-        }
-        else
-        {
-            if(mAnimation.finised_Animation){ //When a special animation has finished
-                if (falling) //Finished falling animation
-                {
-                    linkHasFalled();
-                }
-                else if (nArrows != 0 && bow) //Spawn Arrow
-                {
-                    //System.out.println("Dispara");
-                    shootArrow();
-                    bow = false;
-                }
-                else if (attack) //Finished Attack (attack && !bow)
-                {
-                    //sSystem.out.println("ataca");
-                    Attack();
-                    bow = false;
-                    attack = false;
-                }
-                 mAnimation.finised_Animation = false;
-            }
-            else if (!mAnimation.getMust_Complete())
-            {
-                Move();
-            }
-            //System.out.println(actionToString());
-        }
+        if(dash){dash();return;}//Early return dash is mostly the dominate action, so if link is dashing he can not do anything else
+        if (!mAnimation.MustComplete()){Move();}
     }
     // ------------------------------------------------------------------------
-
+    
+    /* Colision
+     *      -> True if there is no collision
+     */
     public boolean SolveCollisions(Vector2D<Integer> dif) {
-        CollisionResult res = mCollider.GetBounds().collisionTile(dif.x, dif.y);
+        CollisionResult res = hitbox.GetBounds().collisionTile(
+            dif.x - Level.mCurrentLevel.GetBounds().GetPosition().x, 
+            dif.y - Level.mCurrentLevel.GetBounds().GetPosition().y);
+        
         falling = res == CollisionResult.Hole;
-        //return res == CollisionResult.None;
-        return true;
+        return (res == CollisionResult.None);
     }
-
+    // ------------------------------------------------------------------------
+    
     /*! Move
     *
     *   Moves the sprite on a certain direction
     */ //----------------------------------------------------------------------
     public void Move() {
         Vector2D<Float> pos = GetPosition();
-
-        //System.out.println(directionToString());
         switch (direction){
             case UP:
-                if(SolveCollisions(new Vector2D<>(0, -velocity)))
-                    pos.y -= velocity;
+                if(SolveCollisions(new Vector2D<>(0, -velocity))) pos.y -= velocity;
                 break;
             case DOWN:
-                if(SolveCollisions(new Vector2D<>(0, +velocity)))
-                    pos.y += velocity;
+                if(SolveCollisions(new Vector2D<>(0, +velocity))) pos.y += velocity;
                 break;
             case LEFT:
-                if(SolveCollisions(new Vector2D<>(-velocity, 0)))
-                    pos.x -= velocity;
+                if(SolveCollisions(new Vector2D<>(-velocity, 0))) pos.x -= velocity;
                 break;
             case RIGHT:
-                if(SolveCollisions(new Vector2D<>(velocity, 0)))
-                    pos.x += velocity;
+                if(SolveCollisions(new Vector2D<>(+velocity, 0))) pos.x += velocity;
                 break;
         }
-
         SetPosition(pos);
     }
     // ------------------------------------------------------------------------
 
-    /* Transpose
+    /* Functions to set all animations
     *       @Param  -> BufferedImage 2D Matrix
     *       ret     -> Transposed BufferedImage 2D Matrix
     */ //----------------------------------------------------------------------
@@ -501,29 +454,17 @@ public class Player extends Actor {
     }
     private void takeDamage(){ //Looking for enemies to take damage
         //System.out.println("Vida = " + healthPoints);
-        ArrayList<Entity> allEntities = ObjectManager.GetObjectManager().getmAliveEntities();
-        for (int i = 0; i < allEntities.size(); i++){
-            if (allEntities.get(i) instanceof Enemy){
+        ArrayList<Entity> allEntities = ObjectManager.GetObjectManager().GetAllObjectsOfType(Enemy.class);
+
+        if(allEntities != null)
+            for (int i = 0; i < allEntities.size(); i++){
                 Enemy enemy = (Enemy) allEntities.get(i);
                 Vector2D<Float> enemyPosition = enemy.GetPosition();
                 if (enemyPosition.getModuleDistance(this.GetPosition()) < this.GetScale().y/2){
                     this.setDamage(enemy.getDamage());
-                    enemy.KnockBack(this.GetPosition());
-                }
-            } 
-            //Change solution  
-            /*    
-            else if(allEntities.get(i) instanceof Npc){
-                Npc npc = (Npc) allEntities.get(i);
-                if (npc.GetPosition().getModuleDistance(this.GetPosition()) < this.GetScale().y/2){
-                    isTouchingNpc = true;
-                    npcIndex = npc;
-                } else{
-                    //isTouchingNpc = false;
+                    enemy.KnockBack();
                 }
             }
-            */
-        }
     }
     //------------------------------------------------------------------------
 
@@ -540,11 +481,9 @@ public class Player extends Actor {
     public int getHealthPoints(){return this.healthPoints;}
     private Player getPlayer (){return this;}
     public boolean isAble_to_takeDamage() {return able_to_takeDamage;}
-    //_____________________________________________________
-    //public static Npc getNpcIndex(){return npcIndex;}
-    //_____________________________________________________
-    //------------------------------------------------------------------------
+    public BoxCollider getHitbox() {return hitbox;}
 
+    //------------------------------------------------------------------------
     /* Setters
      * 
      */
@@ -555,10 +494,7 @@ public class Player extends Actor {
         else{
             ThreadInmortal thread = new ThreadInmortal(this);
             thread.start();
-            //System.out.println("Comienza hilo");
-            //HUD
             lifeBar.setHealthPoints(this.healthPoints);
-            //lifeBar.setHearts();
         }
 
     }
@@ -566,20 +502,15 @@ public class Player extends Actor {
     public void setAttack(boolean attack) {this.attack = attack;}
     public void setAble_to_takeDamage(boolean able_to_takeDamage) {this.able_to_takeDamage = able_to_takeDamage;}
     private void setMovement(Action type){
+
         if (type == null){
-            mAnimation.setMust_Complete();
-            if(falling && mCurrentAnimation != FALL || mAnimation.GetAnimation().GetDelay() == -1) { //Enviromental special case
-            SetAnimation(FALL, mAnimation.GetSpriteSheet().GetSpriteArray(FALL), delay);
-            }
+            mAnimation.setMustComplete(true);
+            if(falling && mCurrentAnimation != FALL || mAnimation.GetAnimation().GetDelay() == -1) {SetAnimation(FALL, mAnimation.GetSpriteSheet().GetSpriteArray(FALL), delay);}//Enviromental special case
             return;
         }
-
-        if (type == Action.ATTACK || type == Action.BOW){ //Activate must-end sequence
-            mAnimation.setMust_Complete();
-        }
-
-
         int i = type.getID();
+
+        if (type == Action.ATTACK || type == Action.BOW){mAnimation.setMustComplete(true);}//Activate must-end sequence
 
         switch(direction){
             case UP:
@@ -591,7 +522,6 @@ public class Player extends Actor {
                 if(mCurrentAnimation != DOWN+i || mAnimation.GetAnimation().GetDelay() == -1) {
                     SetAnimation(DOWN+i, mAnimation.GetSpriteSheet().GetSpriteArray(DOWN+i), delay);
                 }
-                //System.out.println("Patata");
                 return;
             case RIGHT:
                 if(mCurrentAnimation != RIGHT+i || mAnimation.GetAnimation().GetDelay() == -1) {
@@ -612,10 +542,8 @@ public class Player extends Actor {
      */
     private void shootArrow(){ //Tiene que dar al enemigo
         nArrows--;
-        if(nArrows == 0){
-            //System.out.println("0 Arrows in quiver");
-        }
-        ObjectManager.GetObjectManager().AddEntity(new Arrow(this));
+        if(nArrows == 0){System.out.println("0 Arrows in quiver");}
+        else{ObjectManager.GetObjectManager().AddEntity(new Arrow(this));}
     }
     //------------------------------------------------------------------------
 
@@ -627,27 +555,24 @@ public class Player extends Actor {
     }
     //------------------------------------------------------------------------
     
-    /*  These functions are called when the acttack animation has finished
+    /*  These functions are called when link interact with other entities
      * 
      */
     public void Attack(){
-        /*  This function takes all de Entitys and if any of them is a instance of Enemys it has to ve consider hast potencial objetives to hit
-         *      It will calculate a vector to the player position to the enemy position
-         *          If the DIRECTION of the vector Player-Enemy and The DIRECTION of the player is the same
-         *             It will called a KnockBack() function of that enemy
-         */
-        ArrayList<Entity> allEntities = ObjectManager.GetObjectManager().getmAliveEntities();
-        for (int i = 0; i < allEntities.size(); i++){
-            if (allEntities.get(i) instanceof Enemy){
-                Enemy enemy = (Enemy) allEntities.get(i);
-                Vector2D<Float> enemyPosition = enemy.GetPosition();
-                if (enemyPosition.getModuleDistance(this.GetPosition()) < this.GetScale().y/2+100){ //Each enemy thats can be attacked
-                    if(direction == getAttackDirection(this.GetPosition().getVectorToAnotherActor(enemyPosition))){
-                        System.out.println("Le da");
-                        enemy.setHealthPoints(damage);
-                        enemy.KnockBack(this.GetPosition());
-                    }
-                }
+        /*  This function takes all Enemys
+                
+        It will calculate a vector to the player position to the enemy position
+        If the DIRECTION of the vector Player-Enemy and The DIRECTION of the player is the same
+        It will called a KnockBack() function of that enemy
+        */
+        ArrayList<Entity> enemies = ObjectManager.GetObjectManager().GetAllObjectsOfType(Enemy.class);
+        if(enemies == null){return;}
+        for(Entity entity : enemies){
+            Enemy currentEnemy = (Enemy) entity;
+            if(currentEnemy.getPseudoPosition().getModuleDistance(getPseudoPosition()) < this.GetScale().getModule()-40){
+                System.out.println( "leda");
+                currentEnemy.setHealthPoints(damage);
+                currentEnemy.KnockBack();
             }
         }
     }
@@ -662,13 +587,13 @@ public class Player extends Actor {
             this.currentNPCinteraction = null;
         }
     }
-
     private Npc nearestNPC (){
-        LinkedList<Actor> NPCs = ObjectManager.GetObjectManager().getMapAliveActors().get(Npc.class);
-        Actor min = NPCs.getFirst();
-        for (Actor npc: NPCs){
-            if (GetPosition().getModuleDistance(npc.GetPosition()) < GetPosition().getModuleDistance(min.GetPosition())){
-                min = npc;
+        ArrayList<Entity> NPCs = ObjectManager.GetObjectManager().GetAllObjectsOfType(Npc.class);
+        Entity min = NPCs.get(0);
+
+        for(Entity x : NPCs) {
+            if (GetPosition().getModuleDistance(x.GetPosition()) < GetPosition().getModuleDistance(min.GetPosition())){
+                min = x;
             }
         }
         if (GetPosition().getModuleDistance(min.GetPosition()) > (GetScale().getModule()/2)){ //Magic number to ajust
@@ -676,20 +601,16 @@ public class Player extends Actor {
         }
         return (Npc) min;
     }
-
+    public void removeInteraction(){
+        currentNPCinteraction = null;
+    }
     public DIRECTION getAttackDirection(Vector2D<Float> vector) { 
         if (Math.abs(vector.x) > Math.abs(vector.y)) {
-            if (vector.x > 0) {
-                return DIRECTION.RIGHT;
-            } else {
-                return DIRECTION.LEFT;
-            }
+            if (vector.x > 0) {return DIRECTION.RIGHT;} 
+            else {return DIRECTION.LEFT;}
         } else {
-            if (vector.y > 0) {
-                return DIRECTION.DOWN;
-            } else {
-                return DIRECTION.UP;
-            }
+            if (vector.y > 0) {return DIRECTION.DOWN;} 
+            else {return DIRECTION.UP;}
         }
     }
     //------------------------------------------------------------------------
@@ -717,12 +638,8 @@ public class Player extends Actor {
     /* To pause the gameplay
      * 
      */
-    public void Pause(){
-        if(PlayState.getGameState() == PlayState.getPlayState()){
-            PlayState.setGameState(2);
-        }else if(PlayState.getGameState() == PlayState.getPauseState()){
-            PlayState.setGameState(1);
-        }
+    private void Pause(){
+        GameLoop.SetPaused(!GameLoop.IsPaused());
     }
     //------------------------------------------------------------------------
 
@@ -734,16 +651,21 @@ public class Player extends Actor {
     }
     //------------------------------------------------------------------------
 
+    /* This function is called when Link fell out or the Border
+     * 
+     */
     private void linkHasFalled(){
         falling = false;
         stop = true;
         setDamage(2);
         this.direction = DIRECTION.DOWN;
         setToSpawnPoint();
-        mCollider.Reset();
+        hitbox.Reset();
+        mAnimation.SetFrames(mAnimation.GetSpriteSheet().GetSpriteArray2D()[DOWN+Action.STOP.getID()]);
     }
+    public void setBow(boolean bow) {this.bow = bow;}
+    //------------------------------------------------------------------------
 
-    public void removeInteraction(){
-        currentNPCinteraction = null;
-    }
+    @Override 
+    public Class GetSuperClass(){return Player.class;}
 }
